--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,29 +1,38 @@
 {
-  "name": "Solana Anchor Dev",
-  "image": "mcr.microsoft.com/devcontainers/rust:1-bookworm",
+  "name": "Solana Anchor (Ubuntu 24.04)",
+  // 关键修改：使用 Ubuntu 24.04 (Noble) 基础镜像，它包含 GLIBC 2.39
+  "image": "mcr.microsoft.com/devcontainers/base:ubuntu-24.04",
   "features": {
-    // 安装 Node.js (用于运行 Anchor 的测试脚本)
+    // 通过特性安装 Rust，而不是依赖基础镜像
+    "ghcr.io/devcontainers/features/rust:1": {
+      "version": "latest",
+      "profile": "default"
+    },
+    // 安装 Node.js
     "ghcr.io/devcontainers/features/node:1": {
       "version": "lts"
+    },
+    // 安装 Solana 常用依赖库
+    "ghcr.io/devcontainers/features/common-utils:2": {
+      "configureZshAsDefaultShell": true
+    },
+    "ghcr.io/devcontainers/features/sshd:1": {
+      "version": "latest"
     }
   },
   "customizations": {
     "vscode": {
       "extensions": [
-        "rust-lang.rust-analyzer", // Rust 语法支持
-        "tamasfe.even-better-toml", // TOML 文件高亮
-        "serayuzgur.crates", // 依赖包版本管理
-        "vadimcn.vscode-lldb" // 调试工具
+        "rust-lang.rust-analyzer",
+        "tamasfe.even-better-toml",
+        "serayuzgur.crates",
+        "vadimcn.vscode-lldb"
       ]
     }
   },
-  // 端口转发：将 Solana 本地节点的 8899 端口暴露出来
   "forwardPorts": [8899],
-
-  // 容器创建后执行的命令：安装系统依赖、Solana CLI 和 Anchor CLI
-  "updateContentCommand": "sudo apt-get update && sudo apt-get install -y pkg-config build-essential libudev-dev libssl-dev && sh -c \"$(curl -sSfL https://release.solana.com/v1.18.4/install)\" && export PATH=\"/home/vscode/.local/share/solana/install/active_release/bin:$PATH\" && cargo install --git https://github.com/coral-xyz/anchor avm --locked --force && avm install latest && avm use latest",
-
-  // 设置环境变量，确保终端能找到命令
+  // 容器创建后：安装依赖库 -> 安装 Solana -> 安装 AVM -> 安装 Anchor
+  "updateContentCommand": "sudo apt-get update && sudo apt-get install -y pkg-config build-essential libudev-dev libssl-dev && sh -c \"$(curl -sSfL https://release.solana.com/v1.18.17/install)\" && export PATH=\"/home/vscode/.local/share/solana/install/active_release/bin:$PATH\" && cargo install --git https://github.com/coral-xyz/anchor avm --locked --force && avm install latest && avm use latest",
   "remoteEnv": {
     "PATH": "${containerEnv:PATH}:/home/vscode/.local/share/solana/install/active_release/bin:/home/vscode/.avm/bin"
   }
